--- a/ticket.html
+++ b/ticket.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Pulse Display - Sports</title>
+  
+  <meta name="theme-color" content="#ffffff">
 
   <link rel="manifest" href="manifest.json">
   <script>
