Fix HTML encoding issues in ticket.html

--- a/ticket.html
+++ b/ticket.html
@@ -16,7 +16,7 @@
   </script>
 
   <style>
-    /* ... (Your existing styles) ... */
+    /* ... (Everything else remains exactly as you had it) ... */
     * { margin: 0; padding: 0; box-sizing: border-box; }
     body {
       height: 100vh;
